Add updates to data gathering code

--- a/data/DataGathering.ipynb
+++ b/data/DataGathering.ipynb
@@ -118,9 +118,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Below code is used to get data for training and testing our models. "
+      ],
+      "metadata": {
+        "id": "mrTjlbR_ThlP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# unzip files\n",
+        "# unzip files \n",
         "! unzip movies_metadata.csv.zip\n",
         "! unzip netflix-movies-and-tv-shows-2021.zip\n",
         "! unzip imdb-dataset-of-top-1000-movies-and-tv-shows.zip"
@@ -183,8 +192,8 @@
         "output_1 = output_1.apply(lambda x: json.loads(x.replace(\"'\", '\"'))) # make the string into a list of dictionaries\n",
         "output_1 = output_1.apply(extract_genre) # get the genre from the dictionaries\n",
         "\n",
-        "print(len(input_1.index))\n",
-        "print(output_1[1])\n",
+        "# print(len(input_1.index)) # size of dataset\n",
+        "# print(output_1[1]) # example genre output\n",
         "\n",
         "# Netflix dataset (netflixData.csv)\n",
         "# features: 'genres' (label), 'description' (input)\n",
@@ -194,8 +203,8 @@
         "output_2 = df_2['Genres']\n",
         "\n",
         "output_2 = output_2.str.split(', ') # make genres a list\n",
-        "print(len(input_2.index))\n",
-        "print(output_2[2])\n",
+        "# print(len(input_2.index)) # size of dataset\n",
+        "# print(output_2[2]) # example genre output\n",
         "\n",
         "# IMDB dataset (imdb_top_1000.csv)\n",
         "# features: 'Genre' (label), 'Overview' (input)\n",
@@ -205,14 +214,17 @@
         "output_3 = df_3['Genre']\n",
         "\n",
         "output_3 = output_3.str.split(', ') # make genres a list\n",
-        "print(len(input_3.index))\n",
-        "print(output_3[1])\n",
+        "# print(len(input_3.index)) # size of dataset\n",
+        "# print(output_3[1]) # example genre output\n",
         "\n",
         "# Human classification dataset (human_classification_training.csv)\n",
         "df_4 = pd.read_csv('human_classification_training.csv')\n",
         "# print(df_4.columns)\n",
         "input_4 = df_4['Synopsis']\n",
-        "output_4 = df_4['Genre']"
+        "output_4 = df_4['Genre']\n",
+        "\n",
+        "# print(len(input_3.index)) # size of dataset\n",
+        "# print(output_3[1]) # example genre output"
       ],
       "metadata": {
         "id": "hbUZRfqDLMBI",
